Fix recipient overflow.
- Hid overflow from body
- Replaced absolute height value with flex in Recipient

--- a/app.css
+++ b/app.css
@@ -18,7 +18,7 @@ html {
 
 html, body {
   max-width: 100vw; 
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
